infrastructure/registry/chartmuseum-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: chartmuseum
spec:
  parentRefs:
    - name: traefik-external
      namespace: networking
  hostnames:
    - "charts.mmontes.duckdns.org"
  rules:
    - backendRefs:
        - kind: Service
          name: chartmuseum
          port: 8080
